--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,13 @@ wp-config-sample.php
 !wp-content/themes/
 
 # ignore these plugins
-wp-content/plugins/hello.php
+# wp-content/plugins/hello.php
 
 # ignore specific themes
-wp-content/themes/twenty*/
+# wp-content/themes/twenty*/
 
 # ignore node dependency directories
-node_modules/
+# node_modules/
 
 # ignore log files and databases
 *.log
