--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 wp-config.php
 wp-config-sample.php
-
+wp-content/uploads/
 # ignore everything in the root except the "wp-content" directory.
 !wp-content/
 
